--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <img src="./img/logo.svg" alt="Logo DWS">
+    <img src="./img/logo.svg" alt="Logo DWSapp.io">
 </body>
 </html>
